Fix (https://github.com/nikhilmodak/gulp-ngdocs/issues/9) Adding overflow auto for long module names.

--- a/src/templates/css/docs.css
+++ b/src/templates/css/docs.css
@@ -68,6 +68,7 @@ img.AngularJS-small {
 
 .form-search > ul.nav > li > a {
   margin: 0;
+  overflow: auto;
 }
 
 .form-search > ul.nav > li.module {
